@@ -1,10 +1,11 @@
-jq(document).ready(function() {
+
+jq(document).ready(function () {
 
 
     /**************************************************************************
      * Delete a single comment.
      **************************************************************************/
-    jq("input[name='form.button.Delete']").click(function(e) {
+    jq("input[name='form.button.Delete']").click(function (e) {
         e.preventDefault();
         var button = jq(this);
         var row = jq(this).parent().parent();
@@ -15,13 +16,13 @@ jq(document).ready(function() {
         jq.ajax({
             type: "GET",
             url: target,
-            success: function(msg){
+            success: function (msg) {
                 // fade out row
-                jq(row).fadeOut("normal", function(){
+                jq(row).fadeOut("normal", function () {
                     jq(this).remove();
                 });
             },
-            error: function(msg){
+            error: function (msg) {
                 alert("Error sending AJAX request:" + target);
             }
         });
@@ -31,7 +32,7 @@ jq(document).ready(function() {
     /**************************************************************************
      * Publish a single comment.
      **************************************************************************/
-    jq("input[name='form.button.Publish']").click(function(e) {
+    jq("input[name='form.button.Publish']").click(function (e) {
         e.preventDefault();
         var button = jq(this);
         var row = jq(this).parent().parent();
@@ -42,13 +43,13 @@ jq(document).ready(function() {
             type: "GET",
             url: target,
             data: "workflow_action=publish",
-            success: function(msg){
+            success: function (msg) {
                 // fade out row
-                jq(row).fadeOut("normal", function(){
+                jq(row).fadeOut("normal", function () {
                     jq(this).remove();
                 });
             },
-            error: function(msg){
+            error: function (msg) {
                 alert("Error sending AJAX request:" + target);
             }
         });
@@ -58,31 +59,31 @@ jq(document).ready(function() {
     /**************************************************************************
      * Bulk actions for comments (delete, publish)
      **************************************************************************/
-    jq("input[name='form.button.BulkAction']").click(function(e) {
+    jq("input[name='form.button.BulkAction']").click(function (e) {
         e.preventDefault();
-        var form = jq(this).parents("form")
+        var form = jq(this).parents("form");
         var target = jq(form).attr('action');
         var params = jq(form).serialize();
         var valArray = jq('input:checkbox:checked');
         var selectField = jq(form).find("[name='form.select.BulkAction']");
-        if (selectField.val() == '-1') {
+        if (selectField.val() === '-1') {
             // XXX: translate message
             alert("You haven't selected a bulk action. Please select one.");
-        } else if (valArray.length == 0) {
+        } else if (valArray.length === 0) {
             // XXX: translate message
             alert("You haven't selected any comment for this bulk action. Please select at least one comment.");
         } else {
-            jq.post(target, params, function(data) {
+            jq.post(target, params, function (data) {
                 valArray.each(function () {
                     /* Remove all selected lines. */
                     var row = jq(this).parent().parent();
-                    row.fadeOut("normal", function() {
-                       row.remove();
+                    row.fadeOut("normal", function () {
+                        row.remove();
                     });
                 });
             });
             // reset the bulkaction select
-            selectField.find("option[value='-1']").attr( 'selected', 'selected' );
+            selectField.find("option[value='-1']").attr('selected', 'selected');
         }
     });
 	
@@ -90,26 +91,25 @@ jq(document).ready(function() {
     /**************************************************************************
      * Check or uncheck all checkboxes from the batch moderation page.
      **************************************************************************/
-    jq("input[name='check_all']").click(function(){
-          if(jq(this).val()==0){
+    jq("input[name='check_all']").click(function () {
+        if (jq(this).val() === 0) {
             jq(this).parents("table")
                    .find("input:checkbox")
-                   .attr("checked","checked");
+                   .attr("checked", "checked");
             jq(this).val("1");
-          }
-          else{
+        } else {
             jq(this).parents("table")
                    .find("input:checkbox")
-                   .attr("checked","");
+                   .attr("checked", "");
             jq(this).val("0");
-          }
+        }
     });
 		
 
     /**************************************************************************
      * Show full text of a comment in the batch moderation page.
      **************************************************************************/
-    jq(".show-full-comment-text").click(function(e) {    
+    jq(".show-full-comment-text").click(function (e) {    
         e.preventDefault();
         var target = jq(this).attr("href");
         var td = jq(this).parent();
@@ -117,11 +117,11 @@ jq(document).ready(function() {
             type: "GET",
             url: target,
             data: "",
-            success: function(data){
+            success: function (data) {
                 // show full text
                 td.replaceWith("<td>" + data + "</td>");
             },
-            error: function(msg){
+            error: function (msg) {
                 alert("Error getting full comment text:" + target);
             }
         });        
